Fixed bug #30961 (Wrong linenumber in ReflectionClass getStartLine())

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@187912 c90b9560-bf6c-de11-be94-00142212c4b1